--- a/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator/View/GenericFlyerView.xaml
+++ b/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator/View/GenericFlyerView.xaml
@@ -15,7 +15,7 @@
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </UserControl.Resources>
-    <Grid Background="Red">
+    <Grid Background="Red" Margin="10,10,10,10">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*" SharedSizeGroup="ColumnGroups"/>
             <ColumnDefinition Width="1*" SharedSizeGroup="ColumnGroups"/>
@@ -93,7 +93,7 @@
                 <TextBox Grid.Column="1" Grid.Row="3" Text="No Rainchecks" Style="{StaticResource FlyerStoreInfoStyle}" Visibility="{Binding ShowRaincheck}"/>
             </Grid>
         </Grid>
-        
+
         <!--Flyer Items Grid-->
         <Grid Grid.Row="1" Grid.ColumnSpan="4">
             <Grid.ColumnDefinitions>
