--- a/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator/Themes/DefaultStyle.xaml
+++ b/FoodGiantFlyerGenerator/FoodGiantFlyerGenerator/Themes/DefaultStyle.xaml
@@ -23,14 +23,14 @@
         <Setter Property="TextWrapping" Value="Wrap"/>
     </Style>
     <Style TargetType="TextBox" x:Key="FlyerItemDollarPriceStyle">
-        <Setter Property="FontSize" Value="55"/>
+        <Setter Property="FontSize" Value="50"/>
         <Setter Property="FontFamily" Value="Franklin Gothic Heavy"/>
         <Setter Property="TextWrapping" Value="Wrap"/>
         <Setter Property="MaxLength" Value="5"/>
         <Setter Property="BorderThickness" Value="0,0,0,0"/>
     </Style>
     <Style TargetType="TextBox" x:Key="FlyerItemCentsPriceStyle">
-        <Setter Property="FontSize" Value="36"/>
+        <Setter Property="FontSize" Value="30"/>
         <Setter Property="FontFamily" Value="Franklin Gothic Heavy"/>
         <Setter Property="TextWrapping" Value="Wrap"/>
         <Setter Property="MaxLength" Value="2"/>
@@ -89,10 +89,12 @@
     <Style TargetType="TextBlock" x:Key="FlyerItemSizeStyle">
         <Setter Property="FontSize" Value="16"/>
         <Setter Property="FontFamily" Value="Franklin Gothic Heavy"/>
+        <Setter Property="TextWrapping" Value="Wrap"/>
     </Style>
     <Style TargetType="TextBlock" x:Key="FlyerItemNameDesStyle">
         <Setter Property="FontSize" Value="12"/>
         <Setter Property="FontFamily" Value="Franklin Gothic Heavy"/>
+        <Setter Property="TextWrapping" Value="Wrap"/>
     </Style>
     <Style TargetType="TextBlock" x:Key="FlyerSmallCalendarDateStyle">
         <Setter Property="FontSize" Value="11"/>
